<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Standard Values (English) -->


    <!-- General -->
    <string name="app_name">Mental Maths</string>
    <string name="title_activity_start_screen">Start Screen</string>
    <string name="title_activity_exercises">Exercises</string>
    <string name="title_activity_end_result">Evaluation</string>
    <string name="title_activity_high_score">Highscores</string>
    <string name="title_activity_extra_fun">ExtraFunActivity</string>

    <!-- Actions -->
    <string name="action_settings">Settings</string>
    <string name="action_credits">Credits</string>
    <string name="action_restart">Restart</string>
    <string name="action_reset">Reset Highscores</string>
    <string name="action_fun">Extra Fun</string>
    <string name="action_notification">Notifications</string>

    <!-- Toasts -->
    <string name="number_range_toast_error">Enter a number range first</string>
    <string name="too_easy_toast">That number range is too easy for you!</string>
    <string name="multiplication_toast">Difficulty was set to easy due to low number range</string>
    <string name="division_not_available_toast">High difficulty is not available for division. Difficulty was set to easy</string>
    <string name="credits_toast">This App was created by Sebastian Maier</string>
    <string name="double_press_back">Press Back again to exit</string>
    <string name="no_internet_connection">No internet connection available</string>
    <string name="right_toast">Correct!</string>
    <string name="wrong_toast">Wrong!</string>
    <string name="result_toast_error">Enter a result first</string>
    <string name="enter_name_first_toast">Enter your name first</string>
    <string name="wrong_name_toast">Illegal Name</string>
    <string name="need_that_toast">Good decision</string>

    <!-- Notifications -->
    <string name="even_more_fun">Even more extra fun!!!</string>

    <!-- StartScreen -->
    <string name="play_button">Train</string>
    <string name="extra_fun_button">Extra Fun</string>
    <string name="music_toggle_on">Music On</string>
    <string name="music_toggle_off">Music Off</string>
    <string name="notif_toggle_on">Notifications On</string>
    <string name="notif_toggle_off">Notifications Off</string>

    <!-- SplashScreen -->
    <string name="app_name_english">Mental Maths</string>
    <string name="created_by">Created by Sebastian Maier</string>

    <!-- MainActivity -->
    <string name="welcome_text_view">Welcome to Mental Maths!</string>
    <string name="choose_text_view">Simply choose a difficulty level and the number range(for the results) you want to deal with.</string>
    <string name="difficulty_text_view">Difficulty</string>
    <string name="easy_text_view">Easy</string>
    <string name="hard_text_view">Hard</string>
    <string name="number_range_text_view">Number range (up to):</string>

    <string-array name="number_range_spinner">
        <item>50</item>
        <item>100</item>
        <item>150</item>
        <item>200</item>
        <item>250</item>
        <item>300</item>
    </string-array>

    <string name="rounds_text_view">How many exercises do you want to do?</string>

    <string-array name="rounds_entries_spinner">
        <item>5</item>
        <item>10</item>
        <item>15</item>
        <item>20</item>
        <item>25</item>
        <item>30</item>
    </string-array>

    <string name="addition_button">Addition</string>
    <string name="subtraction_button">Subtraction</string>
    <string name="multiplication_button">Multiplication</string>
    <string name="division_button">Division</string>

    <!-- ExercisesActivity -->
    <string name="exercise_number_text_view">Exercise</string>
    <string name="check_button">Check</string>
    <string name="points_text_view">Points:</string>
    <string name="button_one">1</string>
    <string name="button_two">2</string>
    <string name="button_three">3</string>
    <string name="button_four">4</string>
    <string name="button_five">5</string>
    <string name="button_six">6</string>
    <string name="button_seven">7</string>
    <string name="button_eight">8</string>
    <string name="button_nine">9</string>
    <string name="button_zero">0</string>
    <string name="button_clear">C</string>
    <string name="button_back_desc">Back</string>

    <!-- EndResultActivity/ HighScoreActivity -->
    <string name="reached_points_1_text_view">You have reached </string>
    <string name="reached_points_2_text_view"> out of </string>
    <string name="reached_points_3_text_view"> points.</string>
    <string name="played_mode_text_view">Played mode: </string>
    <string name="difficulty_2_text_view">Difficulty: </string>
    <string name="number_range_2_text_view">Number range (up to): </string>
    <string name="rounds_2_text_view">Played rounds: </string>
    <string name="time_needed">Time needed: </string>
    <string name="seconds"> seconds</string>
    <string name="points_per_second">Points per second: </string>
    <string name="new_highscore">New Highscore!</string>
    <string name="can_do_better">I bet you can do better!</string>
    <string name="current_high_score">Current Highscore: </string>
    <string name="previous_high_score">Previous Highscore: </string>
    <string name="points_per_second_by"> points per second by </string>
    <string name="save_highscore_button">Save Highscore</string>
    <string name="play_again_button">Train again</string>
    <string name="highscore_button">Highscores</string>
    <string name="name_hint">Name</string>
    <string name="enter_name">Enter your name:</string>
    <string name="save">Save</string>
    <string name="dont_save">Cancel</string>
    <string name="saved">Successfully saved!</string>
    <string name="no_highscore_yet">No highscore yet</string>

</resources>
