<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">


    <TextView android:id="@+id/exerciseTitleTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="24sp"/>

    <TextView android:id="@+id/exerciseNumberTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/exerciseTitleTextView"
        android:layout_marginTop="20dp"
        android:textSize="16sp"/>

    <LinearLayout android:id="@+id/exerciseWrapper"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_below="@id/exerciseNumberTextView"
        android:layout_marginTop="10dp">

         <TextView android:id="@+id/exerciseTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="18sp"
            android:maxLines="3"/>

        <EditText android:id="@+id/resultEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="number"
            android:textSize="18sp"
            android:clickable="false"
            android:focusable="false"
            android:cursorVisible="false"
            android:maxLength="6"/>

        <Button android:id="@+id/checkButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/check_button"
            android:background="@drawable/button_background"/>

    </LinearLayout>

    <TextView android:id="@+id/pointsTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:layout_below="@id/exerciseWrapper"
        android:layout_marginLeft="5dp"/>

    <Chronometer android:id="@+id/timeChronometer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/exerciseWrapper"
        android:layout_toRightOf="@id/pointsTextView"
        android:layout_marginLeft="160dp"
        android:visibility="visible"/>

    <LinearLayout android:id="@+id/row1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/pointsTextView"
        android:layout_marginTop="25dp">

        <Button android:id="@+id/oneButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_one"
            android:background="@drawable/button_background"
            style="?android:attr/borderlessButtonStyle"/>

        <Button android:id="@+id/twoButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_two"
            android:background="@drawable/button_background"
            android:layout_marginLeft="10dp"
            style="?android:attr/borderlessButtonStyle"/>

        <Button android:id="@+id/threeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_three"
            android:background="@drawable/button_background"
            android:layout_marginLeft="10dp"
            style="?android:attr/borderlessButtonStyle"/>

    </LinearLayout>

    <LinearLayout android:id="@+id/row2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/row1"
        android:layout_marginTop="10dp">

        <Button android:id="@+id/fourButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_four"
            android:background="@drawable/button_background"
            style="?android:attr/borderlessButtonStyle"/>

        <Button android:id="@+id/fiveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_five"
            android:background="@drawable/button_background"
            android:layout_marginLeft="10dp"
            style="?android:attr/borderlessButtonStyle"/>

        <Button android:id="@+id/sixButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_six"
            android:background="@drawable/button_background"
            android:layout_marginLeft="10dp"
            style="?android:attr/borderlessButtonStyle"/>

    </LinearLayout>

    <LinearLayout android:id="@+id/row3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/row2"
        android:layout_marginTop="10dp">

        <Button android:id="@+id/sevenButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_seven"
            android:background="@drawable/button_background"
            style="?android:attr/borderlessButtonStyle"/>

        <Button android:id="@+id/eightButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_eight"
            android:background="@drawable/button_background"
            android:layout_marginLeft="10dp"
            style="?android:attr/borderlessButtonStyle"/>

        <Button android:id="@+id/nineButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_nine"
            android:background="@drawable/button_background"
            android:layout_marginLeft="10dp"
            style="?android:attr/borderlessButtonStyle"/>

    </LinearLayout>

    <LinearLayout android:id="@+id/row4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/row3"
        android:layout_marginTop="10dp">

        <Button android:id="@+id/clearButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_clear"
            android:background="@drawable/button_background"
            style="?android:attr/borderlessButtonStyle"/>

        <Button android:id="@+id/zeroButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_zero"
            android:background="@drawable/button_background"
            android:layout_marginLeft="10dp"
            style="?android:attr/borderlessButtonStyle"/>

        <ImageButton android:id="@+id/backButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/button_background"
            android:layout_marginLeft="10dp"
            android:src="@drawable/back_button"
            android:contentDescription="@string/button_back_desc"
            style="?android:attr/borderlessButtonStyle"/>

    </LinearLayout>

</RelativeLayout>
