<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/orange">

    <TextView android:id="@+id/titleTextView"
        android:text="@string/app_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:gravity="center_horizontal"
        android:layout_marginTop="20dp"/>

    <Button android:id="@+id/playButton"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:text="@string/play_button"
        android:background="@drawable/button_background"
        android:layout_below="@id/titleTextView"
        android:layout_marginTop="35dp"
        android:textSize="18sp"/>

    <Button android:id="@+id/showHighscoresButton"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_below="@id/playButton"
        android:layout_marginTop="15dp"
        android:text="@string/highscore_button"
        android:background="@drawable/button_background"
        android:textSize="18sp"/>

    <Button android:id="@+id/extraFunButton"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_below="@id/showHighscoresButton"
        android:text="@string/extra_fun_button"
        android:layout_marginTop="15dp"
        android:background="@drawable/button_background"
        android:textSize="18sp"/>

    <Button android:id="@+id/creditsButton"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_below="@id/extraFunButton"
        android:layout_marginTop="15dp"
        android:text="@string/action_credits"
        android:background="@drawable/button_background"
        android:textSize="18sp"/>

    <CheckBox android:id="@+id/musicCheckBox"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_below="@id/creditsButton"
        android:layout_marginTop="15dp"
        android:background="@drawable/button_background"
        android:gravity="center"
        android:textSize="18sp"
        android:textColor="@color/black"/>

    <CheckBox android:id="@+id/notifCheckBox"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_below="@id/musicCheckBox"
        android:layout_marginTop="15dp"
        android:background="@drawable/button_background"
        android:gravity="center"
        android:textSize="18sp"
        android:textColor="@color/black"/>

</RelativeLayout>
