<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
   android:layout_width="match_parent"
   android:layout_height="match_parent"
   android:paddingLeft="@dimen/activity_horizontal_margin"
   android:paddingRight="@dimen/activity_horizontal_margin"
   android:paddingTop="@dimen/activity_vertical_margin"
   android:paddingBottom="@dimen/activity_vertical_margin"
   android:background="@color/turqoise">

    <TextView android:id="@+id/divisionEasyTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/easy_text_view"
        android:textSize="24sp"
        android:gravity="center"
        android:layout_marginTop="30dp"/>

    <TextView android:id="@+id/divisionEasyScoreTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/divisionEasyTextView"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:textSize="16sp"/>

    <TextView android:id="@+id/divisionHardTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hard_text_view"
        android:textSize="24sp"
        android:gravity="center"
        android:layout_marginTop="80dp"
        android:layout_below="@id/divisionEasyScoreTextView"/>

    <TextView android:id="@+id/divisionHardScoreTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/divisionHardTextView"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:textSize="16sp"/>

    <Button android:id="@+id/playAgainDivisionHighScoreButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_background"
        android:layout_below="@id/divisionHardScoreTextView"
        android:layout_margin="30dp"
        android:onClick="playAgain"
        android:text="@string/play_again_button"/>

</RelativeLayout>