<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/yellow">

    <TextView android:id="@+id/multiplicationEasyTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/easy_text_view"
        android:textSize="24sp"
        android:gravity="center"
        android:layout_marginTop="30dp"/>

    <TextView android:id="@+id/multiplicationEasyScoreTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/multiplicationEasyTextView"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:textSize="16sp"/>

    <TextView android:id="@+id/multiplicationHardTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hard_text_view"
        android:textSize="24sp"
        android:gravity="center"
        android:layout_marginTop="80dp"
        android:layout_below="@id/multiplicationEasyScoreTextView"/>

    <TextView android:id="@+id/multiplicationHardScoreTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/multiplicationHardTextView"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:textSize="16sp"/>

    <Button android:id="@+id/playAgainMultiplicationHighScoreButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_background"
        android:layout_below="@id/multiplicationHardScoreTextView"
        android:layout_margin="30dp"
        android:onClick="playAgain"
        android:text="@string/play_again_button"/>

</RelativeLayout>